@@ -8474,26 +8474,75 @@ void ExecutiveRenderSelections(PyMOLGlobals * G, int curState, int slot, GridInf
   int any_active = false;
   int no_depth = (int) SettingGetGlobal_f(G, cSetting_selection_overlay);
   short use_shader = (short) SettingGetGlobal_b(G, cSetting_use_shaders);
+  float min_width;
+  float gl_width;
+  int width;
+  int max_width = (int) SettingGetGlobal_f(G, cSetting_selection_width_max);
+  float width_scale = SettingGetGlobal_f(G, cSetting_selection_width_scale);
+  int round_points = SettingGetGlobal_b(G, cSetting_selection_round_points);
+  short inv_indicators = false;
+  min_width = SettingGetGlobal_f(G, cSetting_selection_width);
+  if(width_scale >= 0.0F) {
+    width = (int) ((width_scale *
+		    fabs(SettingGetGlobal_f(G, cSetting_stick_radius)) /
+		    SceneGetScreenVertexScale(G, NULL)));
+    if(width < min_width)
+      width = (int) min_width;
+    else if(width > max_width)
+      width = (int) max_width;
+  } else
+    width = (int) min_width;
+  if(round_points) {
+    width = (int) (width * 1.44F);
+  }
+  gl_width = (float) width;
+  if(width > 6) {   /* keep it even above 6 */
+    if(width & 0x1) {
+      width--;
+      gl_width = (float) width;
+    }
+  }
 
   if (use_shader){
+    if (I->selectorTextureSize!=(int)gl_width || round_points != I->selectorIsRound ){
+      inv_indicators = true;
+    } else {
+      if (slot){
+	while(ListIterate(I->Spec, rec, next)) {
+	  if(rec->type == cExecObject) {
+	    if (SceneGetDrawFlagGrid(G, grid, rec->obj->grid_slot)){
+	      if (rec->gridSlotSelIndicatorsCGO){
+		ExecutiveRenderIndicatorCGO(G, rec->gridSlotSelIndicatorsCGO);
+	      }
+	    }
+	  }
+	}
+	rec = NULL;
+      } else if (I->selIndicatorsCGO){
+	ExecutiveRenderIndicatorCGO(G, I->selIndicatorsCGO);
+	return;
+      }
+    }
+  } else {
+    inv_indicators = true;
+  }
+  if (inv_indicators){
+    if (I->selIndicatorsCGO){
+      CGOFree(I->selIndicatorsCGO);
+      I->selIndicatorsCGO = NULL;
+    }
     if (slot){
       while(ListIterate(I->Spec, rec, next)) {
 	if(rec->type == cExecObject) {
 	  if (SceneGetDrawFlagGrid(G, grid, rec->obj->grid_slot)){
 	    if (rec->gridSlotSelIndicatorsCGO){
-	      ExecutiveRenderIndicatorCGO(G, rec->gridSlotSelIndicatorsCGO);
+	      CGOFree(rec->gridSlotSelIndicatorsCGO);
+	      rec->gridSlotSelIndicatorsCGO = NULL;
 	    }
 	  }
 	}
       }
-      rec = NULL;
-    } else if (I->selIndicatorsCGO){
-      ExecutiveRenderIndicatorCGO(G, I->selIndicatorsCGO);
-      return;
     }
-  } else if (I->selIndicatorsCGO){
-    CGOFree(I->selIndicatorsCGO);
-    I->selIndicatorsCGO = NULL;
   }
   while(ListIterate(I->Spec, rec, next)) {
     if(rec->type == cExecSelection) {
@@ -8507,54 +8556,24 @@ void ExecutiveRenderSelections(PyMOLGlobals * G, int curState, int slot, GridInf
   if(any_active) {
     SpecRec *rec1;
     int sele;
-    float min_width;
-    float gl_width;
-    int width;
-
-    int max_width = (int) SettingGetGlobal_f(G, cSetting_selection_width_max);
-    float width_scale = SettingGetGlobal_f(G, cSetting_selection_width_scale);
-    int round_points = SettingGetGlobal_b(G, cSetting_selection_round_points);
     int vis_only = SettingGetGlobal_b(G, cSetting_selection_visible_only);
     int fog = SettingGetGlobal_b(G, cSetting_depth_cue) && SettingGetGlobal_f(G, cSetting_fog);
 
     (void)fog;
 
     rec = NULL;
-    min_width = SettingGetGlobal_f(G, cSetting_selection_width);
 
-    if(width_scale >= 0.0F) {
-      width = (int) ((width_scale *
-                      fabs(SettingGetGlobal_f(G, cSetting_stick_radius)) /
-                      SceneGetScreenVertexScale(G, NULL)));
-      if(width < min_width)
-        width = (int) min_width;
-      else if(width > max_width)
-        width = (int) max_width;
-    } else
-      width = (int) min_width;
-
-    if(round_points) {
-      width = (int) (width * 1.44F);
-    }
     if(round_points) {
       glEnable(GL_POINT_SMOOTH);
       glAlphaFunc(GL_GREATER, 0.5F);
       glEnable(GL_ALPHA_TEST);
       glHint(GL_POINT_SMOOTH_HINT, GL_NICEST);
-      width = (int) (width * 1.44F);
     } else {
       glDisable(GL_POINT_SMOOTH);
       glDisable(GL_ALPHA_TEST);
       glHint(GL_POINT_SMOOTH_HINT, GL_FASTEST);
     }
 
-    gl_width = (float) width;
-    if(width > 6) {   /* keep it even above 6 */
-      if(width & 0x1) {
-	width--;
-	gl_width = (float) width;
-      }
-    }
     if (use_shader && (I->selectorTextureSize!=(int)gl_width || round_points != I->selectorIsRound )){
       int level_widths[] = { 0, 0, 0 };
       level_widths[0] = (int)gl_width;
